--- a/docker-login/docker-compose.yml
+++ b/docker-login/docker-compose.yml
@@ -1,5 +1,14 @@
-version: "4.33.0"
+version: "4.33.1"
 services:
+  nginx:
+    container_name: nginx-login
+    image: nginx:1.27.0
+    volumes:
+      - ./staticfiles:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 80:80
+
   database:
     container_name: login
     image: postgres:16.3
